// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test Variable With Initializer > init const test_key_path = source.a 1`] = `
{
  "initializer": {
    "keyPath": [
      "source",
      "a",
    ],
    "kind": "KeyPathExpression",
  },
  "key": "test_key_path",
  "kind": "VariableDeclaration",
  "meta": undefined,
  "type": {
    "kind": "String",
  },
}
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 1`] = `
[
  1,
  {
    "kind": "Boolean",
  },
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 2`] = `
[
  2,
  {
    "kind": "Number",
  },
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 3`] = `
[
  3,
  undefined,
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 4`] = `
[
  4,
  {
    "kind": "Number",
  },
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 5`] = `
[
  5,
  undefined,
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 6`] = `
[
  6,
  {
    "kind": "Number",
  },
]
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 7`] = `
{
  "initializer": {
    "enumerateFor": {
      "keyPath": [
        "source",
        "b",
      ],
      "kind": "KeyPathExpression",
    },
    "kind": "EnumerateExpression",
  },
  "key": "test_key_path",
  "kind": "VariableDeclaration",
  "meta": undefined,
  "type": {
    "kind": "Number",
  },
}
`;

exports[`test Variable With Initializer > subscribe variable changes by expression 8`] = `
[
  7,
  undefined,
]
`;
